WIP: #46: fix for widget-header-content that should only be overridden in left panel, and scrollbar colours.

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -494,7 +494,7 @@
 	}
 
 	/* Override leftPanel background so we can use dynamic theme */
-	.ui-widget-header, 
+	#leftPanel .ui-widget-header, 
 	#leftPanel {
 		background: none;
 	}
@@ -987,7 +987,7 @@
 	}
 
 	::-webkit-scrollbar-thumb {
-		background: var(--background-highlight);
+		background: var(--text);
 	}
 
 	#header {
